<resources>
    <string name="games_current_game_name">default game name</string>
    <string name="game_high_score">High Score</string>
    <string name="game_start_button">Start Game</string>
    <string name="game_rule_title">How to play</string>
    <string name="sample_very_long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet metus aliquet nunc congue vulputate quis eu mi. Pellentesque id lectus sollicitudin, tempor est eu, sollicitudin diam. Vivamus consectetur, mi non maximus pellentesque, orci ex interdum nisl, non laoreet libero felis id mauris. In neque urna, scelerisque sit amet faucibus in, rhoncus sit amet dui. Donec sed maximus nibh. Donec ac eros et nisl efficitur commodo. Suspendisse aliquet nunc porttitor sem aliquam, in posuere mauris fringilla. Duis ligula orci, iaculis ut erat et, volutpat tempor dolor. Curabitur leo risus, hendrerit ut neque et, aliquet placerat augue. Morbi dictum risus et libero placerat tempus. Aenean lacus urna, molestie et vulputate id, ornare nec nibh. Sed iaculis diam nec felis eleifend lobortis sit amet sed lacus.  Morbi viverra nisi quis lorem porttitor dapibus. Nunc luctus lobortis dolor ac malesuada. Phasellus sit amet ante lobortis, convallis ligula vitae, faucibus nibh. Donec eget mollis sem. Vivamus sit amet ex aliquam, pretium eros in, gravida dolor. Suspendisse suscipit, eros ut egestas faucibus, elit justo tincidunt nisl, eget vehicula diam sapien vitae metus. Nam lobortis sapien a leo ultricies, vitae viverra tortor scelerisque. Ut elementum lorem id elit ultricies sollicitudin. Nulla sit amet ligula erat. Nunc tincidunt turpis et hendrerit condimentum. Mauris leo quam, laoreet nec nisi eget, auctor placerat nunc. Cras elementum nec purus ut consectetur. Donec eu feugiat est. Nullam gravida auctor est, posuere sollicitudin nulla tristique a.  Praesent cursus sed lorem vitae pulvinar. Aenean at dui sit amet ante scelerisque accumsan. Donec et ultrices dui, tincidunt posuere lacus. Maecenas feugiat vitae nisi et pharetra. Nullam faucibus libero at vulputate consequat. Vestibulum id arcu id metus varius lobortis. Maecenas a viverra lectus.  Quisque iaculis auctor diam, sed porta nisi luctus in. Mauris in vestibulum eros, non pellentesque libero. Sed sit amet mollis ligula. Nunc feugiat purus ut pharetra feugiat. Fusce cursus dolor non ante efficitur, at eleifend metus ullamcorper. Nulla id dictum sem. Proin augue libero, facilisis in sollicitudin a, eleifend nec sem. Duis tincidunt efficitur risus, ac consequat velit dignissim at. Nunc rutrum, nisi id malesuada tempor, orci nunc accumsan diam, et tempus urna odio id nisi. Vivamus massa neque, hendrerit ut felis non, facilisis porta urna. Mauris pulvinar velit ex, sed vulputate quam viverra eget. Suspendisse eleifend egestas faucibus. Fusce porta laoreet pretium.  Nam dapibus condimentum quam quis porta. Proin in lorem turpis. Nam molestie pulvinar mauris, eu consequat sapien feugiat in. Morbi convallis neque quis quam egestas mollis. Nam tempus sem ac vehicula condimentum. Ut tristique, metus a feugiat ultricies, lectus ex dapibus dolor, quis volutpat tortor quam vitae risus. Vivamus congue laoreet laoreet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nullam vitae odio fringilla, dictum eros sed, mattis lacus. Integer et tortor purus. Duis rhoncus vulputate fermentum. Vestibulum placerat ultrices cursus. Curabitur rutrum lacus ac ante posuere, eu lacinia erat porttitor. Nunc nec tristique enim.</string>
    <string name="game_result_score">Your score:</string>
    <string name="game_result_word_list_title">Words Featured:</string>
    <string name="game_result_exit_game_button">Return to menu</string>
    <string name="app_name">English Learning</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_exit_button">Return to menu</string>
    <string name="game_menu_title">Game</string>
    <string name="game_menu_prompt">Choose a Game</string>
    <string name="back_description">back</string>
    <string name="game_word_question_prompt">Unscramble this word:</string>
    <string name="game_spelling_bee_question_prompt">Spell this word:</string>
    <string name="skip">Skip</string>
    <string name="_12_b_i_h_c">12 bài học</string>
    <string name="game_name_lexicon">Lexicon</string>
    <string name="game_rule_lexicon">"* This game is input-based, it will end after a number correct answer is entered\n* You will need to input x unique word in order to complete the game\n* The point you gain will based on the length of the word you entered\n* An extra random condition appear for each new input, fulfil them to double the point of the word\n* When the word is incorrect / not found in our codex, you get deduced 100 points and have to try again "</string>
    <string name="game_name_spelling_bee">Spelling bee</string>
    <string name="game_rule_spelling_bee">"* This game is round-based, which mean that the game will end after a number of rounds has ended \n* In each round, there will be a word which you need to spell out \n* You will be only provided with an audio and IPA of the word\n* You need to drag and drop each letter into the correct position to form the correct word \n* A round will end when all positions have been filled, after that point will be added and a new word will be generated to start a new round \n* For each word you get correct, you will get 1000 points, and a bonus for each subsequent correct word \n* When the word is incorrect, the bonus is lost and you will not gain any point for that round "</string>
    <string name="game_rule_unscramble">* This game is round-based, it will end after a number of round has passed \n* In each round, there will be an scrambled word\n* You need to drag and drop each letter into the correct position to form the correct word \n* A round will end when all positions have been filled, after that point will be added and a new word will be generated to start a new round\n* For each word you get correct, you will get 1000 points, and a bonus for each subsequent correct word\n* When the word is incorrect, the bonus is lost and you will not gain any point for that round</string>
    <string name="game_name_unscramble">Unscramble</string>
    <string name="back_title">Return?</string>
    <string name="back_prompt_title">Return?</string>
    <string name="back_prompt_description">Do you really want to go back? Some data will not be saved.</string>
    <string name="fill_in_the_blank">Fill in the blanks</string>
    <string name="choose_the_correct_word">Choose the correct word</string>
    <string name="translate_the_word">Translate this sentence</string>
    <string name="find_the_different_from_the_other">Which one of these word is different from the others?\n</string>
    <string name="choose_the_correct_information">Choose the correct information from the conversation</string>
    <string name="th_ng_tin_c_nh_n">Personal information</string>
    <string name="language">Language</string>
    <string name="th_ng_tin_ng_d_ng">Application information</string>
    <string name="th_ng_b_o">Notification</string>
    <string name="export_l_i_sai">Export error</string>
    <string name="ng_xu_t">Sign out</string>
    <string name="t_i_kho_n">Account</string>
    <string name="streak">Streak</string>
</resources>