<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.presentation.fragment.GameRuleFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/game_rule_header_tb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/baseline_arrow_back_ios_new_24">

            <TextView
                android:id="@+id/game_rule_header_tb_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/games_current_game_name"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/game_high_score_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_high_score"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/game_high_score_value_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:text="9999"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/game_rule_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6sp"
            android:layout_marginRight="6sp"
            android:text="@string/game_rule_title"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="6sp"
            android:layout_marginRight="6sp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/game_rule_content_tvz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/sample_very_long_text" />


        </ScrollView>

        <Button
            android:id="@+id/game_start_bt"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginLeft="6sp"
            android:layout_marginRight="6sp"
            android:layout_marginBottom="16sp"
            android:text="@string/game_start_button" />

    </LinearLayout>
</FrameLayout>